--- a/public/css/concept18.css
+++ b/public/css/concept18.css
@@ -215,6 +215,7 @@ body {
 
 .search-silver button:hover {
     background: var(--black);
+    color: var(--white);
 }
 
 /* Grid */
